Add a couple more basic pieces

--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,6 @@
 <html>
 
 <head>
-
   <style>
     body {
       background-color: #eee;
@@ -31,12 +30,14 @@
 
 <body>
 
-<p id="desc">URL of the routing file:</p>
+  <p id="desc">URL of the routing file:</p>
 
-<p><input type="text" size="64" id="routing-input"></p>
+  <p><input type="text" size="64" id="routing-input"></p>
 
-<p id="action"><button id="save">Save</button></p>
+  <p id="action"><button id="save">Save</button></p>
 
+  <script src="common.js"></script>
+  <script src="popup.js"></script>
 </body>
 
 </html>
