Refresh data when saving the new routing URL

--- a/popup.html
+++ b/popup.html
@@ -25,6 +25,10 @@
       padding: 1ex;
       font-size: large;
     }
+
+    #save.success {
+      background-color: green;
+    }
   </style>
 </head>
 
