Parse JSON, inform the UI

--- a/popup.html
+++ b/popup.html
@@ -27,7 +27,10 @@
     }
 
     #save.success {
-      background-color: green;
+      background-color: darkgreen;
+    }
+    #save.failure {
+      background-color: darkred;
     }
   </style>
 </head>
