Show highlight from search query

--- a/popup.html
+++ b/popup.html
@@ -53,6 +53,7 @@
     .result {
       background-color: white;
       border: 1px solid rgba(0, 0, 0, 0.6);
+      cursor: pointer;
       overflow: hidden;
       padding: 1ex;
     }
