Normalize to ignore dashes. Some UI tweaks

--- a/popup.html
+++ b/popup.html
@@ -47,7 +47,8 @@
     #results {
       margin-bottom: 35ex;
       margin-top: 3ex;
-      max-height: 300px;
+      height: 300px;
+      overflow-y: auto;
     }
 
     .result {
