Show when the routing table was last updated in the UI

--- a/popup.html
+++ b/popup.html
@@ -110,7 +110,7 @@
   </div>
 
   <div id="config">
-    <p id="desc">Update definitions:</p>
+    <p id="desc">Update definitions <span id="last-updated"></span></p>
     <div id="routing-input-container">
       <input type="text" size="32" id="routing-input" placeholder="URL of JSON file">
       <button id="save">Save</button>
